added to CV and updated footer

--- a/juanfrans/_includes/footer.html
+++ b/juanfrans/_includes/footer.html
@@ -1,35 +1,9 @@
-<footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {{ site.author | upcase | escape }}
-          </li>
-          {%- if site.email -%}
-          <li><a class="u-email" href="mailto:{{ site.email }}">EMAIL</a></li>
-          {%- endif -%}
-          {%- if site.github -%}
-          <li><a class="u-email" href="{{ site.github }}">GITHUB</a></li>
-          {%- endif -%}
-          {%- if site.twitter -%}
-          <li><a class="u-email" href="{{ site.twitter }}">TWITTER</a></li>
-          {%- endif -%}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
-      </div>
-    </div>
-
-  </div>
-
-</footer>
+<div class="bt b--light-silver pv3 mw7 w-100 center">
+  <p class="f7 tracked tc ph4 robotoMono">Contact at <a 
+    class="u-email" href="mailto:{{ site.email }}">email</a>, <a 
+    class="u-email" href="{{ site.github }}">Github</a> & <a 
+    class="u-email" href="{{ site.twitter }}">Twitter</a> | made with <a 
+    href="https://jekyllrb.com/">Jekyll</a> & <a
+    href="http://tachyons.io/">Tachyons</a> | <a
+    href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a></p>
+</div>
