--- a/juanfrans/_layouts/default.html
+++ b/juanfrans/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {%- include header.html -%}
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+      <div class="center mw7 ph3">
         {{ content }}
       </div>
     </main>
