--- a/juanfrans/_layouts/home.html
+++ b/juanfrans/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="home">
+<div class="home robotoMono f6 f5-ns">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
@@ -10,23 +10,24 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "SELECTED PROJECTS" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
+  <p class="pt4 pb2">Here are some of my projects. In time, more will be added.</p>
+    {% assign rows = site.posts.size | divided_by: 2.0 | ceil %}
+    {% for i in (1..rows) %}
+      <div>
+        <div class="cf">
+        {% assign offset = forloop.index0 | times: 2 %}
+        {% for post in site.posts limit:2 offset:offset %}
+          <div class="fl w-100 w-50-ns pr3-ns">
+            <a href="{{ post.url | relative_url }}">
+              <img src="{{ post.thumbImagePath | relative_url }}" class="mb2" alt="{{ post.title }}">
+              <p class="post-link pt2 mb2">{{ post.title | upcase | escape }}</p>
+              <p class="f6-ns pb3">{{ post.shortDescription }}</p>
+            </a>
+          </div>
+        {% endfor %}
+        </div>
+      </div>
+    {% endfor %}
   {%- endif -%}
 
 </div>
