--- a/juanfrans/public/custom.css
+++ b/juanfrans/public/custom.css
@@ -7,7 +7,6 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
 }
-
 h1 {
     font-family: 'Roboto Mono', monospace;
     font-weight: 300;
@@ -32,25 +31,40 @@ h4 {
 a, a:visited {
     color: black;
     text-decoration: none;
-    /* text-decoration-color: red; */
     border-bottom: 1px solid;
     border-color: #ff8800;
 }
 a:hover {
     text-decoration: none;
 }
-.site-title {
+.site-title, .site-title:visited {
     border-bottom: 0px;
-    font-size: 1em;
+    font-size: 0.9em;
     font-weight: 400;
+    letter-spacing: 0.02em;
+    color: black;
+}
+.page-link, .page-link:visited {
+    border-bottom: 0px;
+    letter-spacing: 0.02em;
+    color: black;
 }
 ul {
     list-style-type: circle;
     margin-left: 1em;
     font-family: 'Roboto Mono', monospace;
     font-weight: 300;
-    font-size: 0.85em;
+    font-size: 1em;
 }
 li {
     padding-bottom: 1em;
+}
+.site-header {
+    border-top: 0px;
+    border-bottom: 1px solid #aaa;
+}
+.post-link {
+    border-bottom: 0px;
+    font-size: 1em;
+    font-weight: 400;
 }
