--- a/juanfrans/_layouts/default.html
+++ b/juanfrans/_layouts/default.html
@@ -3,11 +3,11 @@
 
   {%- include head.html -%}
 
-  <body>
+  <body class="mw8 center ph3">
 
     {%- include header.html -%}
     <main class="page-content" aria-label="Content">
-      <div class="center mw7 ph3">
+      <div class="">
         {{ content }}
       </div>
     </main>
