--- a/juanfrans/_layouts/home.html
+++ b/juanfrans/_layouts/home.html
@@ -11,17 +11,17 @@ layout: default
 
   {%- if site.posts.size > 0 -%}
   <p class="pt4 pb2">Here are some of my projects. In time, more will be added.</p>
-    {% assign rows = site.posts.size | divided_by: 2.0 | ceil %}
+    {% assign rows = site.posts.size | divided_by: 3.0 | ceil %}
     {% for i in (1..rows) %}
       <div>
         <div class="cf">
-        {% assign offset = forloop.index0 | times: 2 %}
-        {% for post in site.posts limit:2 offset:offset %}
-          <div class="fl w-100 w-50-ns pr3-ns">
+        {% assign offset = forloop.index0 | times: 3 %}
+        {% for post in site.posts limit:3 offset:offset %}
+          <div class="fl w-100 w-third-ns pr3-ns">
             <a href="{{ post.url | relative_url }}">
               <img src="{{ post.thumbImagePath | relative_url }}" class="mb2" alt="{{ post.title }}">
               <p class="post-link pt2 mb2">{{ post.title | upcase | escape }}</p>
-              <p class="f6-ns pb3">{{ post.shortDescription }}</p>
+              <p class="f7-ns pb3">{{ post.shortDescription }}</p>
             </a>
           </div>
         {% endfor %}
