--- a/juanfrans/public/custom.css
+++ b/juanfrans/public/custom.css
@@ -68,3 +68,10 @@ li {
     font-size: 1em;
     font-weight: 400;
 }
+/* table {
+    border: 0px;
+}
+table td {
+    padding: 0px 5px 0px 0px;
+    border: 0px;
+} */
