--- a/juanfrans/_includes/footer.html
+++ b/juanfrans/_includes/footer.html
@@ -1,5 +1,5 @@
-<div class="bt b--light-silver pv3 mw7 w-100 center">
-  <p class="f7 tracked tc ph4 robotoMono">Contact at <a 
+<div class="bt b--light-silver pv3 w-100 center">
+  <p class="f7 tracked tc robotoMono">Contact at <a 
     class="u-email" href="mailto:{{ site.email }}">email</a>, <a 
     class="u-email" href="{{ site.github }}">Github</a> & <a 
     class="u-email" href="{{ site.twitter }}">Twitter</a> | made with <a 
