--- a/juanfrans/_layouts/post.html
+++ b/juanfrans/_layouts/post.html
@@ -1,27 +1,15 @@
 ---
 layout: default
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
-  </header>
-
-  <div class="post-content e-content" itemprop="articleBody">
+<div>
+  <img src="{{ page.mainImagePath | relative_url }}" alt="{{ page.title }}">
+  <p class="robotoMono f3-ns f3 mb2-ns mb4 mt3-ns mt3">
+    {{ page.title | upcase}}
+  </p>
+  {% if page.interactiveSite %}
+    <a class="interactiveSite robotoMono f6 link dim br2 ba ph3 pv2 mb3 dib black" href="{{ page.interactiveSite }}">Visit the interactive project site</a>
+  {% endif %}
+  <div class="roboto f5">
     {{ content }}
   </div>
-
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
-
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
-</article>
+</div>
